# wiiko

./: Makefile  README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
frontend/src/: App.svelte  app.postcss
frontend/src/lib/: characters.ts  gamestate.ts  profile_pictures.ts  request_types.d.ts  requests.ts  stores.ts
frontend/src/pages/: Draw.svelte  Lobby.svelte  Root.svelte  Shirt.svelte  Vote.svelte  Wait.svelte  Write.svelte
include/: Game.h  PlayerList.h  Request.h  Server.h
server/: Cargo.toml  README.md
server-rocket/: Cargo.toml
server-rocket/bruno/: Add player.bru  Get Drawing Submissions.bru  Get Matchup as Wii.bru  Get Matchup.bru  Get Players.bru  Get Starting.bru  Get State.bru  Get Votes.bru  Get shirt option.bru  Get specific drawing.bru  Get specific quote.bru  Get specific shirt.bru  Post Matchup.bru  Post State.bru  Post Vote.bru  bruno.json
server-rocket/src/: gamestate.rs  main.rs  player.rs  shirt.rs  uuid.rs
server-rocket/src/routes/: draw.rs  game.rs  join.rs  matchup.rs  mod.rs  players.rs  shirt.rs  write.rs
server-rocket/static/: index.html
server/src/: main.rs  ws.rs
source/: Game.cpp  PlayerList.cpp  Request.cpp  Server.cpp  main.cpp  uuid4.c
wiiko/: CMakeLists.txt  Makefile
wiiko-old/include/: Game.h  PlayerList.h  Server.h  picohttpparser.h
wiiko-old/source/: Server.cpp  main.cpp  picohttpparser.c
wiiko/source/: MiiImage.cpp  MiiImage.h  Shirt.cpp  Shirt.h  Timer.cpp  Timer.h  default_miis.h  main.cpp  mii_config.h  miidraw.cpp  miidraw.h
(+4 files in other folders)
